--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -9,4 +16,12 @@
   width: 150px;
   height: 150px;
   background-color: red;
+}
+
+.emojis {
+  background-color: red;
+}
+
+.matched {
+  background-color: blue;
 }
