--- a/src/App.css
+++ b/src/App.css
@@ -12,16 +12,46 @@
   justify-content: center;
 }
 
-.cards .frontCard {
-  width: 150px;
-  height: 150px;
-  background-color: red;
-}
-
 .emojis {
   background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transition: ease-in-out 1s;
+}
+
+.emojis::after {
+  content: "";
+  background-color: blue;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .matched {
-  background-color: blue;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform: rotateY(180deg);
+  transition: ease 1s;
+  overflow: hidden;
+}
+
+.flip {
+  transform: rotateY(180deg);
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transition: ease-in-out 1s;
 }
