--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,15 @@
   flex-wrap: wrap;
   gap: 3rem;
   justify-content: center;
+  width: 1200px;
+  margin: 2rem auto;
 }
 
 .emojis {
-  background-color: red;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: relative;
   width: 150px;
   height: 150px;
@@ -25,17 +27,22 @@
 
 .emojis::after {
   content: "";
-  background-color: blue;
+  background-image: url("./assets/backgroundForCard.jpg");
+  background-position: center;
+  background-size: cover;
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
 .matched {
-  background-color: red;
+  background-image: url("./assets/cardMatchedBackground.jpg");
+  background-position: center;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: relative;
   width: 150px;
   height: 150px;
@@ -46,12 +53,27 @@
 
 .flip {
   transform: rotateY(180deg);
-  background-color: red;
+  background-image: url("./assets/backgroundForCard.jpg");
+  background-position: center;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   position: relative;
   width: 150px;
   height: 150px;
   transition: ease-in-out 1s;
+}
+
+.flip::after {
+  transition: ease-in-out 1s;
+  content: "";
+  background-image: url("./assets/backgroundForCard.jpg");
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
 }
